# git-id

./: LICENSE  README.md  main.py  pyproject.toml
git_id/: __init__.py  core.py  profile.py
