[tool.poetry]
name = "git-id"
version = "1.1.2"
description = "An ID manager for git"
authors = ["Yuichiro Smith <contact@yu-smith.com>"]
license = "MIT License"
readme = "README.md"
repository = "https://github.com/yu-ichiro/git-id"
keywords = ["git", "id", "identity", "manager"]
classifiers = [
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Version Control :: Git",
    "Typing :: Typed",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/yu-ichiro/git-id/issues"

[tool.poetry.dependencies]
python = "^3.8.1"
click = "^7.1.2"
pyyaml = "^5.3.1"
gitpython = "^3.1.9"

[tool.poetry.scripts]
git-id = "git_id.core:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
